--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Source Serif Pro", serif;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
   max-width: 700px;
   border: transparent solid 30px;
@@ -11,14 +11,14 @@ body {
 
 h1 {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 200%;
+  font-size: 2rem;
   text-align: center;
   margin-top: 3em;
 }
 
 h2 {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 150%;
+  font-size: 1.5rem;
 }
 
 h2 a {
@@ -55,7 +55,7 @@ pre {
 
 pre, code {
   font-family: "Source Code Pro", monospace;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .solution {
