--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ h2 {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.5rem;
   display: inline;
-  float: bottom;
 }
 
 h2 a {
@@ -67,7 +66,7 @@ pre, code {
   font-size: 0.875rem;
 }
 
-.solution {
+.intro, .solution {
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
