--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 h1 {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 2rem;
+  font-weight: normal;
   text-align: center;
   padding-top: 3em;
   padding-bottom: 1.5em;
@@ -19,6 +20,7 @@ h1 {
 h2 {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.5rem;
+  font-weight: normal;
   display: inline;
 }
 
