--- a/style.css
+++ b/style.css
@@ -1,77 +1,79 @@
 body {
   background-color: #f5f5f5;
   color: #141414;
-  font-family: "Source Serif Pro", serif;
+  font-family: "Source Sans Pro", serif;
+  font-feature-settings: "kern";
+  font-size: 1.1rem;
   line-height: 1.5;
   margin: auto;
-  max-width: 700px;
+  max-width: 41rem;
   padding: 1rem;
-  -webkit-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  -moz-font-feature-settings: "kern";
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: 100%;
+  -webkit-font-feature-settings: "kern";
+  -webkit-text-size-adjust: 100%;
 }
 
 h1 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 2rem;
+  font-family: "Cinzel", serif;
+  font-size: 2.2rem;
   font-weight: normal;
+  letter-spacing: 0.1em;
   padding-bottom: 1.5em;
   padding-top: 3em;
   text-align: center;
 }
 
-.solution-title {
-  font-family: "Source Sans Pro", sans-serif;
-}
-
 h2 {
-  display: inline;
-  font-size: 1.5rem;
+  font-family: "Source Serif Pro", serif;
+  font-size: 1.4rem;
   font-weight: normal;
+  letter-spacing: 0.08em;
 }
 
-h2 a {
+.problem-title {
   all: inherit;
+  display: inline;
 }
 
 .hash {
   color: #4070a0;
-  display: inline;
-  margin-left: -18px;
   visibility: hidden;
+  float: left;
+  margin-left: -1em;
 }
 
-h2:hover span.hash {
+.problem-title:hover .hash {
   visibility: visible;
 }
 
-.statement a {
-  display: inline;
+.problem-statement {
   float: right;
-  padding-top: 0.4rem;
 }
 
-p a:link, .statement a:link {
+p a:link, .problem-statement:link {
   color: #4070a0;
   text-decoration: none;
 }
 
-p a:hover, .statement a:hover {
+p a:hover, .problem-statement:hover {
   text-decoration: underline;
 }
 
-p a:active, .statement a:active {
+p a:active, .problem-statement:active {
   color: #205080;
 }
 
 pre {
+  font-size: 1rem;
   overflow: scroll;
-  padding: 10px 20px;
+  padding: 0.5rem 0;
 }
 
 pre, code {
   font-family: "Source Code Pro", monospace;
-  font-size: 0.875rem;
 }
 
 .intro, .solution {
